--- a/thesis/example.tex
+++ b/thesis/example.tex
@@ -52,7 +52,7 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
 
 \item (I\ref{step:density}) Since \(m=12\ngtr16=a\), continue.
 
-\item (I\ref{step:smallcalc}) Since \(\deg{h}=1<2\), set \(X=\set{h}\).
+\item (I\ref{step:smallcalc}) Since \(\deg(h)=1<2\), set \(X=\set{h}\).
 
 \item (I\ref{step:small}) Since \(X\ne\emptyset\), replace \(G\) with \(G-X\).  The result is shown in Figure
   \ref{fig:removeh}.  Now \(n=7\) and \(m=11\).
