--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -6,6 +6,36 @@ address={New York},
 year={1990}
 }
 
+@article{suh2,
+author={Suh, Nam P.},
+title={Axiomatic design theory for systems},
+journal={Research in Engineering Design},
+volume={10},
+pages={189--209},
+year={1998}
+}
+
+@inproceedings{jahanbekam,
+author={Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Klein, Helen},
+title={Graph Partitioning Technique to Identify Physically Integrated Design Concepts},
+series={Proceedings of the ASME 2018 International Design Engineering Technical Conferences \& Computers and
+Information in Engineering Conference IDETC/CIE 2018"},
+month={Aug 26--29},
+address={Quebec, Canada},
+year={2018}
+}
+
+@article{cavallaro,
+  author={Behdad, Sara and Cavallaro, Jeffery and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol},
+  title={A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
+  Product Design},
+  journal={Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
+  Information in Engineering Conference},
+  volume={},
+  year={2019},
+  number={DETC2018-98251}
+}
+
 @book{chartrand,
 author={Chartrand, Gary and Zhang, Ping},
 title={A First Course in Graph Theory},
@@ -42,14 +72,3 @@ year={2001}
  address = {New York, NY, USA},
  keywords = {analysis of algorithms, graph manipulation, graphs},
 } 
-
-@article{cavallaro,
-  author = {Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Cavallaro, Jeffery},
-  title = {A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
-  Product Design},
-  journal = {Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
-  Information in Engineering Conference},
-  volume =       {},
-  year =         {2019},
-  number =       {DETC2018-98251},
-}
