--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -18,6 +18,7 @@
 \newcommand{\SG}{\mathscr{G}}
 \newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
+\newtheorem{axiom}{Axiom}
 \newcommand{\restrict}[2]{#1\raise-0.5ex\hbox{\ensuremath|}_{#2}}
 \allowdisplaybreaks
 \begin{document}
