--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,12pt,fleqn]{article}
+\documentclass[letterpaper,12pt]{article}
 \usepackage{matharticle}
 \usepackage{graphtheory}
 \usepackage{flowchart}
@@ -20,6 +20,8 @@
 \newtheorem{proposition}{Proposition}
 \newtheorem{axiom}{Axiom}
 \newcommand{\restrict}[2]{#1\raise-0.5ex\hbox{\ensuremath|}_{#2}}
+\newcommand{\FR}{\text{FR}}
+\newcommand{\DP}{\text{DP}}
 \allowdisplaybreaks
 \begin{document}
 
